# envctl

./: .envctl.schema.yaml  .envctl.yaml  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  clinter.toml  mkdocs.yml  output.prof  pyproject.toml
.githooks/: _shared_hook.sh  post-commit  pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md  release-playbook.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci-clinter.yml  ci-coverage.yml  ci-quality.yml  ci-tests.yml  ci.yml  dependabot-auto-merge.yml  docs  docs.yml  release.yml
brand/: messaging.md
docs/: architecture.md  commands.md  config.md  index.md  metadata.md  platforms.md  roadmap.md  security.md
docs/architecture/: boundaries.md  index.md  layers.md
docs/assets/javascripts/: 00-core.js  01-header.js  02-tabs.js  03-reveal.js  04-copy.js  05-backtotop.js  extra.js  scripts.js
docs/assets/stylesheets/: 00-fonts.css  01-tokens-dark.css  01-tokens.css  02-base.css  03-landing-dark.css  03-landing.css  04-docs.css  05-components-dark.css  05-components.css  06-overrides-material-dark.css  06-overrides-material.css  07-utilities.css  extra.css  styles.css
docs/concepts/: binding.md  contract.md  hooks.md  index.md  metadata.md  profiles.md  projection.md  resolution.md  vault.md
docs/dev/: architecture-in-depth.md
docs/getting-started/: first-project.md  index.md  installation.md  mental-model.md  quickstart.md
docs/guides/: ci.md  debugging.md  docker.md  hooks.md  index.md  profiles.md  team.md
docs/internals/: architecture.md  compatibility.md
docs/reference/: commands.md  config.md  configuration.md  distribution.md  encryption.md  index.md  observability.md  platforms.md  profiles.md  roadmap.md  security.md  vault.md
docs/reference/commands/: add.md  check.md  config.md  export.md  fill.md  guard.md  hooks.md  index.md  init.md  inspect.md  profile.md  project.md  remove.md  run.md  set.md  status.md  sync.md  unset.md  vault.md
docs/troubleshooting/: common-errors.md  hooks.md  index.md  recovery.md
docs/workflows/: ci.md  daily.md  debugging.md  team.md  use-cases.md
examples/: vault-layout.txt
overrides/: 404.html  home.html  main.html
overrides/partials/: advanced-note.html  page-context.html
overrides/partials/icons/: github.html
scripts/: dev.sh  install-local.sh  test.sh
src/envctl/: __init__.py  __main__.py  cli.py  constants.py  errors.py  models.py  vault_crypto.py
src/envctl/adapters/: dotenv.py  editor.py  git.py  input.py  process_environment.py  projection_rendering.py
src/envctl/cli/: __init__.py  app.py  callbacks.py  command_support.py  decorators.py  formatters.py  lazy_group.py  runtime.py  serializers.py  typer_theme.py  types.py
src/envctl/config/: __init__.py  defaults.py  loader.py  profile_resolution.py  writer.py
src/envctl/domain/: __init__.py  app_config.py  contract.py  contract_inference.py  contract_sets.py  deprecations.py  diagnostics.py  doctor.py  error_diagnostics.py  expansion.py  hooks.py  metadata.py  operations.py  project.py  remove.py  resolution.py  runtime.py  selection.py  selection_resolution.py  status.py  unlink.py  vault.py
src/envctl/observability/: __init__.py  context.py  emitters.py  error_mapping.py  events.py  fields.py  models.py  recorder.py  renderers.py  sanitization.py  settings.py  timing.py
src/envctl/repository/: __init__.py  contract_composition.py  contract_discovery.py  contract_graph.py  contract_repository.py  hook_repository.py  metadata_repository.py  profile_repository.py  project_context.py  state_repository.py
src/envctl/services/: __init__.py  add_service.py  bind_service.py  check_service.py  command_warning_service.py  config_service.py  context_service.py  contract_selection_service.py  diagnostics_actions.py  doctor_service.py  edit_service.py  error_diagnostics.py  explain_service.py  export_service.py  fill_service.py  git_secret_guard_service.py  group_selection_service.py  hook_service.py  init_service.py  inspect_service.py  profile_service.py  projection_validation.py  rebind_service.py  remove_service.py  repair_service.py  resolution_diagnostics.py  resolution_service.py  run_service.py  selection_filtering.py  set_service.py  status_service.py  sync_service.py  unbind_service.py  unlink_service.py  unset_service.py  vault_mutations.py  vault_project_crypto.py  vault_queries.py  vault_service.py  vault_support.py
src/envctl/templates/: __init__.py
src/envctl/utils/: __init__.py  atomic.py  dotenv.py  filesystem.py  git.py  logging.py  masking.py  output.py  paths.py  permissions.py  project_ids.py  project_names.py  project_paths.py  projection_rendering.py  shells.py  symlinks.py  tilde.py
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_init.py  test_remove.py  test_repair.py  test_set.py  test_status.py  test_unlink.py
tests/integration/cli/: conftest.py  test_ci_mode.py  test_commands.py  test_config.py  test_doctor_profiles.py  test_export.py  test_guard_secrets.py  test_hooks.py  test_init_status.py  test_inspect_composed_contracts.py  test_json_output.py  test_json_string_roundtrip.py  test_profiles_contract_flow.py  test_profiles_management.py  test_profiles_projection_flow.py  test_profiles_write_flow.py  test_set_check_sync.py  test_trace_observability.py
tests/support/: app_config.py  assertions.py  builders.py  callables.py  contexts.py  contracts.py  paths.py  profile_values.py  projection_validation.py
tests/unit/: test_main_module.py  test_package_init.py
tests/unit/adapters/: test_dotenv.py  test_editor.py  test_git.py  test_input.py
tests/unit/architecture/: test_no_legacy_logging.py
tests/unit/cli/: test_app.py  test_callbacks.py  test_check_command_extra.py  test_cli_app_extra.py  test_cli_decorators.py  test_command_support.py  test_commands.py  test_decorators.py  test_formatters.py  test_misc_cli_coverage.py  test_runtime.py  test_serializers.py  test_typer_theme.py
(+294 files in other folders)
