[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envctl"
version = "2.3.4"
description = "Local environment control plane for contract-driven development workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Alessandro Barbagallo", email = "alessbarb@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "Typing :: Typed",
]
keywords = [
  "env",
  "environment",
  "dotenv",
  "cli",
  "developer-tools",
  "configuration",
  "secrets",
  "contract-first",
]
dependencies = [
  "typer>=0.12,<1.0",
  "PyYAML>=6.0,<7.0",
  "pydantic>=2.7,<3.0",
]

[project.urls]
Homepage = "https://github.com/labrynx/envctl"
Repository = "https://github.com/labrynx/envctl"
Issues = "https://github.com/labrynx/envctl/issues"
Changelog = "https://github.com/labrynx/envctl/releases"

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-cov==7.1.0",
  "ruff==0.11.8",
  "mypy==1.11.2",
  "types-PyYAML==6.0.12.20240311",
  "build==1.2.2",
  "twine==6.2.0",
  "pkginfo==1.12.0",
  "vulture==2.16",
]

[project.scripts]
envctl = "envctl.cli.app:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config --import-mode=importlib"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "RUF",
  "SIM",
  "RET",
  "PT",
  "BLE",
  "C90",
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["envctl"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
