[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envctl"
dynamic = ["version"]
description = "Local environment control plane for contract-driven development workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Alessandro Barbagallo", email = "alessbarb@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "Typing :: Typed",
]
keywords = [
  "env",
  "environment",
  "dotenv",
  "cli",
  "developer-tools",
  "configuration",
  "secrets",
  "contract-first",
  "encryption",
]
dependencies = [
  "typer>=0.12,<1.0",
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.7,<3.0",
  "cryptography>=46.0.6,<47",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/labrynx/envctl"
Repository = "https://github.com/labrynx/envctl"
Issues = "https://github.com/labrynx/envctl/issues"
Changelog = "https://github.com/labrynx/envctl/releases"
Documentation = "https://labrynx.github.io/envctl/"

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "ruff==0.15.11",
  "mypy==1.20.1",
  "types-PyYAML==6.0.12.20260408",
  "build==1.4.3",
  "twine==6.2.0",
  "pkginfo==1.12.1.2",
  "vulture==2.16",
  "bandit[toml]==1.9.4",
  "pre-commit==4.5.1",
  "import-linter==2.11",
  "setuptools-scm[simple]>=9.2",
  "cyclonedx-bom==7.3.0",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.7,<10.0",
  "pymdown-extensions>=10.0,<11.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2,<2.0",
]

[project.scripts]
envctl = "envctl.cli.app:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config --import-mode=importlib"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
  "*.egg-info",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "RUF",
  "SIM",
  "RET",
  "PT",
  "BLE",
  "C90",
  "S",
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
  "S108"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]
exclude = '(^build/|^dist/|^src/.*\.egg-info/)'
namespace_packages = true
explicit_package_bases = true

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cryptography.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "dist", "build", "src/envctl.egg-info"]
skips = ["B101", "B404"]
